--- a/Practica-2-Pastelero/assets/style.css
+++ b/Practica-2-Pastelero/assets/style.css
@@ -205,7 +205,7 @@
 /* =========== SABORES ============ */
 
 .adornos{
-  padding: 0rem 2rem;
+  padding: 0rem 3rem;
 }
 
 .adornos__slider{
@@ -249,7 +249,7 @@
 /* ======= Pedidos ======== */
 
 .pedidos{
-  padding: 0rem 2rem 4rem;
+  padding: 0rem 3rem 4rem;
 }
 
 .pedidos__container{
@@ -260,7 +260,7 @@
 .formulario{
   background-color: var(--blue-2);
   width: 50%;
-  padding: 1rem 6rem;
+  padding: 1rem 4rem;
   border-radius: 1rem;
   box-shadow: var(--box-shadow);
 }
@@ -437,8 +437,8 @@ font-size: 1.2rem;
   background-color: #fefefe;
 }
 
-.pedidos{
-  margin-top: 2rem;
+.pedidos-pastelero{
+  margin: 2rem 0 4rem;
   padding: 0;
 }
 
@@ -447,7 +447,7 @@ font-size: 1.2rem;
   margin: 2rem;
   padding: 0;
   overflow-y: scroll;
-  height: 25rem;
+  height: 30rem;
   border: 3px solid var(--blue-1);
 }
 
